<resources>
    <string name="app_name">Weather</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_favourites">Favourites</string>
    <string name="action_alerts">Alerts</string>
    <string name="action_home">Home</string>

    <string name="menu_home">Home</string>
    <string name="menu_favourite">Favourites</string>
    <string name="menu_alert">Alerts</string>
    <string name="menu_settings">Settings</string>
    <string name="weather">Weather</string>
    <string name="city">City Name</string>
    <string name="temperature">16℉</string>
    <string name="description">Mostly Clear</string>
    <string name="date">10/02/2023</string>
    <string name="time">22:09</string>
    <string name="hour">10AM</string>
    <string name="tomorrow">Wednesday</string>
    <string name="wind">Wind</string>
    <string name="wind_value">2.06m/s</string>
    <string name="humidity_value">77%</string>
    <string name="pressure">Pressure</string>
    <string name="cloud">Cloud</string>
    <string name="cloud_value">0%</string>
    <string name="pressure_value">1020hpa</string>
    <string name="range_temperature">H:26℉ L:16℉</string>
    <string name="visibility">Visibility</string>
    <string name="visibility_value">1000m</string>
    <string name="uv">Ultra-Violet</string>
    <string name="uv_value">0.0</string>
    <string name="temperature_txt">Measurement Units</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="location">Location</string>
    <string name="language">Language</string>
    <string name="notifications">Notifications</string>
    <string name="map">Map</string>
    <string name="gps">GPS</string>
    <string name="m_sec">m/s</string>
    <string name="m_hour">Mph</string>
    <string name="kilo_meter">Km</string>
    <string name="yard">Yard</string>
    <string name="celsius">℃ - Meter/Sec</string>
    <string name="fahrenheit">℉ - Mile/Hour</string>
    <string name="kelvin">K - Meter/Sec</string>
    <string name="enable">Enable/Disable </string>
    <string name="english">English</string>
    <string name="arabic">Arabic</string>
    <string name="no_alert">No Alerts</string>
    <string name="no_place">No Places</string>
    <string name="country">Country</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="alarm">Alarm</string>
    <string name="notification">Notification</string>
    <string name="save">Save</string>
    <string name="are_you_sure_to_delete">Are you sure to delete?</string>
    <string name="cancel">Cancel</string>
    <string name="sure">Sure</string>
    <string name="start">2:50 AM\n26 Feb</string>
    <string name="done">Done</string>
    <string name="Sunday">Sun</string>
    <string name="Saturday">Sat</string>
    <string name="Monday">Mon</string>
    <string name="Wednesday">Wed</string>
    <string name="Tuesday">Tues</string>
    <string name="Thursday">Thur</string>
    <string name="Friday">Fri</string>
    <string name="Today">Today</string>
    <string name="title_activity_maps">Map</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="back">Back to Favourites</string>
    <string name="add_place">Add Place To Favourites</string>
    <string name="delete_question">Delete place from favourite list</string>
    <string name="no">No</string>
    <string name="yes">Yes</string>
    <string name="delete_alert">Delete alert</string>
    <string name="channel_description">Channel Description</string>
    <string name="channel_name">Channel Name</string>
    <string name="snooze">Snooze</string>
    <string name="notification_title">titleee</string>
    <string name="alert_type">Choose type of Alert you want..</string>
    <string name="start_time">00:00</string>
    <string name="start_date" />
    <string name="dismiss">dismiss</string>
    <string name="repeat">repeat</string>
    <string name="repeat_day">Repeat</string>
    <string name="temp">4&#176;</string>
    <string name="humidity">Humidity</string>
    <string name="stop">Stop</string>
    <string name="add_to_fav">Add to favourite</string>
    <string name="select_loc">Select location</string>
    <string name="confirm_location">Confirm Location</string>
    <string name="find_location">Fina a Location</string>
</resources>