<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="eg.gov.iti.jets.kotlin.weather.home.view.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/settingsFragment"
        android:name="eg.gov.iti.jets.kotlin.weather.settings.view.SettingsFragment"
        android:label="@string/menu_settings"
        tools:layout="@layout/fragment_settings" />
    <fragment
        android:id="@+id/favouriteFragment"
        android:name="eg.gov.iti.jets.kotlin.weather.favourite.view.FavouriteFragment"
        android:label="@string/menu_favourite"
        tools:layout="@layout/fragment_favourite" />
    <fragment
        android:id="@+id/alertFragment"
        android:name="eg.gov.iti.jets.kotlin.weather.alert.view.AlertFragment"
        android:label="@string/menu_alert"
        tools:layout="@layout/fragment_alert" />
</navigation>