<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:backgroundTint="@color/light_blue"
    app:cardCornerRadius="15dp"
    app:cardElevation="5dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:padding="8dp"
        android:weightSum="4">

        <TextView
            android:id="@+id/dayNameTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/tomorrow"
            android:textColor="@color/white"
            android:textSize="20sp" />

        <ImageView
            android:id="@+id/dayWeatherIconImageView"
            android:layout_width="70dp"
            android:layout_height="30dp"
            android:layout_weight="1"
            android:src="@drawable/weather" />

        <TextView
            android:id="@+id/dayDescriptionTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/description"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/dayHighLowTempTextView"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/range_temperature"
            android:textColor="@color/white"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.cardview.widget.CardView>