<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginBottom="25dp"
    android:background="@color/lighter_blue"
    tools:context=".settings.view.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <RelativeLayout
            android:id="@+id/language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/lighter_blue"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="19dp"
                android:background="@color/light_blue"
                android:orientation="vertical"
                android:padding="20dp">

                <RadioGroup
                    android:id="@+id/languagesRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center">

                    <RadioButton
                        android:id="@+id/englishRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:checked="true"
                        android:text="@string/english"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/arabicRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:checked="false"
                        android:text="@string/arabic"
                        android:textColor="@color/white"
                        android:textSize="20sp" />


                </RadioGroup>
            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:backgroundTint="@color/transparent"
                android:text="@string/language"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/notification"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/lighter_blue"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/language">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="19dp"
                android:background="@color/light_blue"
                android:orientation="vertical"
                android:padding="20dp">

                <RadioGroup
                    android:id="@+id/notificationsRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center">

                    <RadioButton
                        android:id="@+id/enableNotificationsRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:checked="false"
                        android:text="@string/enable"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/disableNotificationsRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:checked="false"
                        android:text="@string/disable"
                        android:textColor="@color/white"
                        android:textSize="20sp" />


                </RadioGroup>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:backgroundTint="@color/transparent"
                android:text="@string/notifications"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/temperature"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/lighter_blue"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/notification">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="19dp"
                android:background="@color/light_blue"
                android:orientation="vertical"
                android:padding="20dp">

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center">

                    <RadioButton
                        android:id="@+id/celsiusRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:checked="false"
                        android:text="@string/celsius"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/fahrenheitRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:checked="false"
                        android:text="@string/fahrenheit"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/kelvinRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:checked="false"
                        android:text="@string/kelvin"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                </RadioGroup>

            </RelativeLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:backgroundTint="@color/transparent"
                android:text="@string/temperature_txt"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@color/lighter_blue"
            android:elevation="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/temperature">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="19dp"
                android:background="@color/light_blue"
                android:orientation="vertical"
                android:padding="20dp">

                <RadioGroup
                    android:id="@+id/locationRadioGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center"
                    android:gravity="center">

                    <RadioButton
                        android:id="@+id/mapRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:checked="false"
                        android:text="@string/map"
                        android:textColor="@color/white"
                        android:textSize="20sp" />

                    <RadioButton
                        android:id="@+id/gpsRadioButton"
                        android:layout_width="match_parent"
                        android:layout_height="50dp"
                        android:checked="false"
                        android:text="@string/gps"
                        android:textColor="@color/white"
                        android:textSize="20sp" />


                </RadioGroup>

            </RelativeLayout>


            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="19dp"
                android:backgroundTint="@color/transparent"
                android:text="@string/location"
                android:textColor="@color/blue"
                android:textSize="25sp"
                android:textStyle="bold" />

        </RelativeLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>